--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=device-emitter
 spring.kafka.bootstrap-servers=localhost:9093
 # Kafka roducer Configuration
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer.delegate=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+#spring.kafka.producer.value-serializer.delegate=org.springframework.kafka.support.serializer.JsonSerializer
 
 # H2 Database Configuration
 spring.datasource.url=jdbc:h2:mem:testdb
